Added support for unshare and fixed bugs around sharing
